@@ -2,7 +2,7 @@ Changelog 0.8.1.1
 ------------------
 [SA-00487] network connection is not working correct
 [SA-00492] Mediaplayer: OGG Vorbis files displayed as videos
-[SA-00491] Sally: update Team in sally
+[SA-00491] Sally: update Team in sally about dialog
 [SA-00497] Sally: CApp: HasApplication() option is not working
 [SA-00479] MediaPlayer: total crash
 [SA-00483] MediaPlayer: it's possible to rewind into the previous song... that should not be possible
@@ -11,6 +11,7 @@ Changelog 0.8.1.1
 + processbar drawing improvment
 + slider drawing improvment
 + resize the background of label controls
+[SA-00500] MediaPlayer: facebook like: extend the like function
 
 
 Changelog 0.8.0.6
